@startuml
'https://plantuml.com/class-diagram

package Views {

    class BoardView{
        board
        mainBoardPane
        spaces
        playersView
        statusLabel
        spaceEventHandler

        drawConveyorBelt()
        drawObstacle()
        drawAntenna()
        drawCheckPoint()
        drawGear()

    }

    class CardFieldView {
        ROBO_RALLY_CARD
        CARDFIELD_WIDTH
        CARDFIELD_HEIGHT
        BORDER
        BG_DEFAULT
        BG_DROP
        BG_ACTIVE
        BG_DONE
        field
        label
        gameController

        cardFieldRepresentation()
    }

    class PlayersView {
        board
        playerViews
    }

    class PlayerView {
        player
        top
        programLabel
        programPane
        cardsLabel
        cardsPane
        programCardViews
        cardViews
        buttonPanel
        finishButton
        executeButton
        stepButton
        playerInteractionPanel
        gameController
    }

    class RoboRallyMenuBar {
        appController
        saveGame
        newGame
        loadGame
        stopGame
        exitApp
    }

    class SpaceView {
        SPACE_HEIGHT
        SPACE_WIDTH
        space

        updatePlayer()
    }

    class ViewObserver <<Interface>> {
       update()
    }

note right of ViewObserver
    All classes except RoboRallyMenuBar
    implements ViewObserver
end note
}

package "Models" #DDDDDD {

    () Board
    () CommandCardField
    () Player
    () Space

}

package "Controllers" #DDDDDD {

    () GameController
    () AppController

}

'Views
BoardView -- PlayersView
BoardView -- SpaceView
PlayersView -- PlayerView
PlayerView -- CardFieldView

'Models
Board -- BoardView
Board -- PlayersView
CommandCardField -- CardFieldView
Player -- PlayerView
Space -- SpaceView

'Controllers
GameController -- CardFieldView
GameController -- PlayerView
AppController -- RoboRallyMenuBar



@enduml